# umdloop_gui

./: .gitignore  README.md  orin.yml
src/: CameraManager.cpp  (+1 more)
umdloop_gui_web/: README.md  led_controller.py  package-lock.json  pyproject.toml  requirements.txt  ros_bridge.py  server.py
umdloop_gui_web/app/: MapView.js  OperationsWall.js  config.js  globals.css  page.js
umdloop_gui_web/app/GUI functions/: CameraFeed.js  CameraManagerModal.js  MapView.js  MissionPanel.js  Navigation.js  NavigationBar.js  OperationsWall.js  OperatorTab.js  PageContent.js  ScienceMonitor.js  TechnicianDashboard.js
umdloop_gui_web/app/components/layout/: ConnectionStatusBanner.jsx  PageContent.jsx
umdloop_gui_web/app/config/: constants.js
umdloop_gui_web/app/features/operator/: ArmView.jsx  DriveAutonavView.jsx  DriveView.jsx  OperatorTab.jsx  ScienceView.jsx
umdloop_gui_web/app/hooks/: useLedController.js  useWebRTCCameras.js
umdloop_gui_web/app/lib/: api.js
umdloop_gui_web/backend_cc2/: __init__.py  __main__.py  app.py  config.py
umdloop_gui_web/backend_cc2/drone/: __init__.py
umdloop_gui_web/backend_cc2/mission_sync/: server.py
umdloop_gui_web/backend_cc2/radio/: router.py
umdloop_gui_web/backend_cc2/ros2/: bridge.py
umdloop_gui_web/backend_cc2/spectrum/: router.py
umdloop_gui_web/backend_common/: __init__.py  base_config.py
umdloop_gui_web/backend_common/models/: __init__.py  drone_telemetry.py  mission_state.py
umdloop_gui_web/backend_orin/: __init__.py  __main__.py  app.py  config.py  mission_sync_client.py
umdloop_gui_web/spectrometer/: RamanPlot.jsx
(+13 files in other folders)
