[project]
name = "umdloop-gui-backend"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic-settings>=2.0.0",
    "websockets>=11.0.0",
    "numpy>=1.21.0,<2",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
cc2 = [
    "ramanspy>=0.2.0",
]
orin = [
    "websockets>=11.0.0",
]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["backend_common*", "backend_cc2*", "backend_orin*"]
